--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script type="text/javascript">
 
 </script>
-
+<link href="http://fonts.googleapis.com/css?family=Nobile:regular,bold&subset=latin" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -39,6 +39,66 @@
 		0
 	</div>
 
-	
+	<div class="names"><strong style="opacity:0.5;">Collaborators:</strong></div>
+<br/>
+<br/>
+<div class="names"><span id="design" class="roles" style="margin-left:0px;">design</span> <span id="subtitling" class="roles">subtitling</span> <span id="translation" class="roles">translation</span> <span id="editing" class="roles">editing</span> <span id="interviews" class="roles">interviews</span> <span id="development" class="roles">development</span> <span id="concept" class="roles">concept</span></div>
+<br/>
+<br/>
+
+<div id="creds">
+
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Michelle+Bachler&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Michelle Bachler');" onmouseout="clearHighlights();">Michelle Bachler</a></div>
+<div class="names"><a href="http://www.google.com/#hl=en&amp;expIds=17259,17311,17315,23628,23670,25752,25854,26339,26637,26761,26788,26849,26869,27126,27356,27384,27404,27447&amp;sugexp=ldymls&amp;xhr=t&amp;q=Mark+Boas&amp;cp=9&amp;qe=TWFyayBCb2Fz&amp;qesig=RBGFqLK5JBS3uz7s_-5UYw&amp;pkc=AFgZ2tlvJFKm1YBbeyqKVQV3UvZKifxzjcK9IkNFqtnXa5OT4JNTGoOv_6Wy8QGt3QsbrSpI43eSF2V2RWbDs6sHIybQC4_lSw&amp;pf=p&amp;sclient=psy&amp;aq=0&amp;aqi=&amp;aql=&amp;oq=Mark+Boas&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Mark Boas');" onmouseout="clearHighlights();">Mark Boas</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&hl=en&q=Liz+Castro&aq=f&aqi=g3g-s1g-o1&aql=&oq=&gs_rfai=&pbx=1&fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Liz Castro');" onmouseout="clearHighlights();">Liz Castro</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Xabier+Cid&amp;aq=f&amp;aqi=g4&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Xabier Cid');" onmouseout="clearHighlights();">Xabier Cid</a></div>
+<div class="names" onmouseover="highlight('Brett Gaylor');" onmouseout="clearHighlights();"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Brett+Gaylor&amp;aq=f&amp;aqi=g4&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba">Brett Gaylor</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Laurian+Gridihoc&amp;aq=f&amp;aqi=g4&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Laurian Gridihoc');" onmouseout="clearHighlights();">Laurian Gridihoc</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Sufian+Hassan&amp;aq=f&amp;aqi=g4&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Sufian Hassan');" onmouseout="clearHighlights();">Sufian Hassan</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Laura+F.+hilliger&amp;aq=f&amp;aqi=g4g-o1&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Laura F. Hilliger');" onmouseout="clearHighlights();">Laura F. Hilliger</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Dave+Humphrey&amp;aq=f&amp;aqi=g4&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Dave Humphrey');" onmouseout="clearHighlights();">Dave Humphrey</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Ali+Asad+Lotia&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Ali Asad Lotia');" onmouseout="clearHighlights();">Ali Asad Lotia</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Anna+Martinez+Comalada&amp;aq=&amp;aqi=&amp;aql=&amp;oq=Anna+Martinez+Comalada&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Anna Martinez Comalada');" onmouseout="clearHighlights();">Anna Martinez Comalada</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Ben+Moskowitz&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Ben Moskowitz');" onmouseout="clearHighlights();">Ben Moskowitz</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Gabriel+Shalom&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Gabriel Shalom');" onmouseout="clearHighlights();">Gabriel Shalom</a></div>
+<div class="names"><a href="http://www.google.com/#sclient=psy&amp;hl=en&amp;q=Oscar+Otero&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=&amp;gs_rfai=&amp;pbx=1&amp;fp=ef4dd17ccb2eb5ba" onmouseover="highlight('Oscar Otero');" onmouseout="clearHighlights();">Oscar Otero</a></div>
+<div class="names"><a href="http://www.google.com/#hl=en&amp;expIds=17259,17311,17315,23628,23670,25752,25854,26339,26637,26761,26788,26849,26869,27126,27356,27384,27404,27447&amp;sugexp=ldymls&amp;xhr=t&amp;q=Berton+Y%C3%A1%C3%B1ez&amp;cp=10&amp;qe=QmVydG9uIFnh8WV6&amp;qesig=T5boLiI5Y2lLII0xdDxO-g&amp;pkc=AFgZ2tlvJFKm1YBbeyqKVQV3UvZKifxzjcK9IkNFqtnXa5OT4JNTGoOv_6Wy8QGt3QsbrSpI43eSF2V2RWbDs6sHIybQC4_lSw&amp;pf=p&amp;sclient=psy&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=Berton+Y%C3%A1%C3%B1ez&amp;gs_rfai=&amp;pbx=1&amp;fp=257d70b645c283b4" onmouseover="highlight('Berton Y&aacute;&ntilde;ez');" onmouseout="clearHighlights();">Berton Y&aacute;&ntilde;ez</a></div>
+
+</div>
+<script>
+
+var roles = {};
+
+roles['Michelle Bachler'] = ['development', 'concept'];
+roles['Mark Boas'] = ['subtitling', 'concept'];
+roles['Liz Castro'] = ['development', 'subtitling', 'concept'];
+roles['Xabier Cid'] = ['development', 'concept'];
+roles['Brett Gaylor'] = ['editing', 'concept'];
+roles['Laurian Gridihoc'] = ['development', 'concept'];
+roles['Sufian Hassan'] = ['design', 'concept'];
+roles['Laura F. Hilliger'] = ['design', 'development', 'subtitling', 'translation', 'concept'];
+roles['Dave Humphrey'] = ['development', 'concept'];
+roles['Ali Asad Lotia'] = ['design', 'subtitling', 'concept'];
+roles['Anna Martinez Comalad'] = ['design', 'subtitling', 'concept'];
+roles['Ben Moskowitz'] = ['design', 'subtitling', 'concept'];
+roles['Guillermo Movia'] = ['design'];
+roles['Gabriel Shalom'] = ['design', 'translation', 'interviews', 'editing', 'concept'];
+roles['Oscar Otero'] = ['translation', 'concept'];
+roles['Berton Y&aacute;&ntilde;ez'] = ['design', 'development', 'concept'];
+
+function clearHighlights() {
+  $('.roles').removeClass('highlighted');
+}
+
+function highlight(name) {
+  clearHighlights();
+
+  var r = roles[name];
+  for (var i = 0; i < r.length; i++) {
+    $('#'+r[i]).addClass('highlighted');
+  }
+}
+
+</script>
 </body>
 </html>
